2009-02-08 Chris Allegretta <chrisa@asty.org>
	* Add more multidata initliazers for new buffers and 'magic lines'.  Fixes segfaults
	  with syntax highlighting in new buffers, initially reported by Mike Frysinger.

GNU nano 2.1.8 - 2009.02.07
2009-02-06 Chris Allegretta <chrisa@asty.org>
	* rcfile.c (parse_include): Abort on being unable to open an included rcfile.  Fixes
	  Savannah bug 25490, nanorc: "include"ing a file which doesn't exist causes nano to segfault.

2009-02-05 Chris Allegretta <chrisa@asty.org>
	* More color syntax speedups:  Determine in reset_multis() whether we really need to call
	  edit_refresh().  Additional global var edit_refresh_needed() to hopefully reduce
	  repeated calls to the function.  New helper funcs reset_multis_before() and 
	  reset_multis_after().

2009-02-02 Chris Allegretta <chrisa@asty.org>
	* New color precalculation code for mult-line regexes.  New function precalc_multicolorinfo(),
	  new structure multidata for keeping track of where regexes start/stop.  More 
	  performance improvements forthcoming.

2009-01-29 Chris Allegretta <chrisa@asty.org>
	* nano.c (move_to_filestruct) - properky initialize new fileage for multiswatching, sigh.
	  Fix cut sefaults discovered by Mike Frysinger.

2009-01-29 Chris Allegretta <chrisa@asty.org>
	* nano.c (main): Add support for nano acting like a pager when invoked with - as first
	  file argument.

2009-01-28 Davide Pesavento <davidepesa@gmail.com>
	* doc/syntax/gentoo.nanorc: Updates from David and Mike Frysinger.

2009-01-25 Chris Allegretta <chrisa@asty.org>
	* files.c (open_file), nanorc.c (parse_include): Don't get_full_path on 
	  included rc files, due to it potentially impacting the ability
	  to read files in nano's cwd().  Fixes Savnanah bug #25297 reported by Mike 
	  Frysinger)

2009-01-24 Chris Allegretta <chrisa@asty.org>
	* First pass at some caching of caching color info.  Right now it's only for